WIP: Bump upstreams to SNAPSHOTs
Adopt:
- odlparent-10.0.0
- infrautils-3.0.0
- yangtools-8.0.0-SNAPSHOT
- mdsal-9.0.0-SNAPSHOT
- controller-5.0.0-SNAPSHOT
- aaa-0.15.0-SNAPSHOT

Change-Id: I99a02e3b4e831d32013fa722d2bda3932c873ffc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>